--- a/sass/_journeys.sass
+++ b/sass/_journeys.sass
@@ -42,7 +42,7 @@
         height: 50rem
         width: 100%
         transition: all .5s
-        -webkit-backface-visibility: hidden;
+        -webkit-backface-visibility: hidden
         backface-visibility: hidden
         overflow: hidden
         border-radius: 2px
