--- a/sass/_journeys.sass
+++ b/sass/_journeys.sass
@@ -26,7 +26,7 @@
 
 .journey
     height: 50rem
-    -moz-perspective: 150rem;
+    -moz-perspective: 150rem
     perspective: 150rem
     position: relative
 
